Actions
Bug #11354
openzonecfg.1m has some formatting mistakes and typos
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
- "zonecfg" on line 46 should be bolded (after "The following synopsis...").
- "add net" on line 700 should be bolded to indicate that it is a command fragment for improved readability.
- "hsfs(7fs)" on line 946 should have formatting like other cross-references.
- "create" syntax on line 1293 has bolding mistakes.
- "remove" syntax on line 1395 mistakenly uses "{}" though the following sentence reads "the [] syntax ...".
- "property -name" on line 1421 has a superfluous space.
- "property-value" hyphen on line 1428 is mistakenly bolded.
No data to display
Actions